# sut_app_datev_export

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  linter.yml
datev_export_sut/: hooks.py  modules.txt
datev_export_sut/datev_export_sut/client_script/: employee.js
datev_export_sut/datev_export_sut/doctype/datev_export_history/: datev_export_history.json
datev_export_sut/datev_export_sut/doctype/datev_export_mandant/: datev_export_mandant.json  datev_export_mandant.py
datev_export_sut/datev_export_sut/doctype/datev_export_sut_settings/: datev_export_sut_settings.js  datev_export_sut_settings.json  datev_export_sut_settings.py
datev_export_sut/datev_export_sut/server_scripts/: employee.py
datev_export_sut/datev_export_sut/utils/: died_mappings.py  email_sender.py  employee_data.py  file_builder.py
sut_app_datev_export/: hooks.py  modules.txt
sut_app_datev_export/fixtures/: custom_field.json  property_setter.json
sut_app_datev_export/sut_app_datev_export/client_script/: employee.js
sut_app_datev_export/sut_app_datev_export/custom/: employee.json
sut_app_datev_export/sut_app_datev_export/doctype/abteilung_fuer_datev_lodas_export/: abteilung_fuer_datev_lodas_export.js  abteilung_fuer_datev_lodas_export.py  (+2 more)
sut_app_datev_export/sut_app_datev_export/server_scripts/: employee.py  personal.py
sut_app_datev_export/sut_app_datev_export/utils/: died_mappings.py  email_sender.py  email_sender_copy.py  employee_data.py  employee_data_copy.py  export_restrictions.py  file_builder.py  file_builder_copy.py
(+16 files in other folders)
