[project]
name = "sut_app_datev_export"
authors = [
    { name = "ahmad900mohammad@gmail.com", email = "ahmad900mohammad@gmail.com"}
]
description = "SUT App DATEV Export"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
